[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
exclude = ".venv"

[tool.mypy]
disallow_untyped_defs = true

[tool.poetry]
name = "nickname-gen"
version = "0.1.0"
description = "Simple Python package for generate unique nikcname, e.g. Green Cat, Cool Duck, Brave Red Tiger. It supports both English and Russian (including gender)."
authors = ["L4zzur <popovnikita01@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "nickname_gen"}]

[tool.poetry.dependencies]
python = "^3.11"
pymorphy3 = "^2.0.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
isort = "^5.13.2"
black = "^24.4.2"
pytest = "^8.2.0"
mypy = "^1.10.0"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
